--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-status": "^1.5.0",
-    "mongoose": "^6.0.7"
+    "mongoose": "^6.0.7",
+    "randomstring": "^1.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
