--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Babatunde Yakub",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
